fix: add /work-data initialization and debug sidecar container to deployment.yaml

--- a/k8s/app/supabase/templates/deployment.yaml
+++ b/k8s/app/supabase/templates/deployment.yaml
@@ -33,12 +33,15 @@ spec:
           command: [
             "sh",
             "-c",
-            "set -e; echo \"[init-postgres-config] Preparing /work-config\"; mkdir -p /work-config; if [ -z \"$(ls -A /work-config 2>/dev/null)\" ]; then echo \"[init-postgres-config] Empty target, seeding defaults from /etc/postgresql-custom\"; cp -a /etc/postgresql-custom/. /work-config/; else echo \"[init-postgres-config] Target already has content, skipping seed\"; fi; echo \"[init-postgres-config] Final contents:\"; ls -la /work-config"
+            "set -e; echo \"[init-postgres-config] Preparing /work-config\"; mkdir -p /work-config; if [ -z \"$(ls -A /work-config 2>/dev/null)\" ]; then echo \"[init-postgres-config] Empty /work-config, seeding defaults from /etc/postgresql-custom\"; cp -a /etc/postgresql-custom/. /work-config/; else echo \"[init-postgres-config] /work-config already has content, skipping seed\"; fi; echo \"[init-postgres-config] Final /work-config contents:\"; ls -la /work-config; echo \"[init-postgres-config] Preparing /work-data\"; mkdir -p /work-data; if [ -z \"$(ls -A /work-data 2>/dev/null)\" ]; then echo \"[init-postgres-config] Empty /work-data, seeding defaults from /var/lib/postgresql/data\"; cp -a /var/lib/postgresql/data/. /work-data/ || true; else echo \"[init-postgres-config] /work-data already has content, skipping seed\"; fi; echo \"[init-postgres-config] Final /work-data contents:\"; ls -la /work-data"
           ]
           volumeMounts:
             - name: supabase-root
               mountPath: /work-config
               subPath: db/config
+            - name: supabase-root
+              mountPath: /work-data
+              subPath: db/data
         {{- end }}
       containers:
         {{- if .Values.postgres.enabled }}
@@ -352,6 +355,19 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
         {{- end }}
+
+        # Debug sidecar that runs indefinitely for interactive troubleshooting
+        - name: debug
+          image: busybox:1.37.0
+          imagePullPolicy: IfNotPresent
+          command: ["sh", "-c", "echo Debug container started; tail -f /dev/null"]
+          stdin: true
+          tty: true
+          volumeMounts:
+            - name: supabase-root
+              mountPath: /mnt/supabase
+            - name: host-ebs-root
+              mountPath: /mnt/ebs
 
       volumes:
         - name: host-ebs-root
