feat: add dependency management for components using `waitForDeployment`
- Introduced `supabase.waitForDeployment` to enforce startup order dependencies across components.
- Simplified init container logic for EBS checks and DB readiness probes.
- Added Role and RoleBinding for deployment waiting logic in RBAC.
- Updated all relevant components to use the new helper for dependency management.

--- a/k8s/app/supabase/templates/deployment-analytics.yaml
+++ b/k8s/app/supabase/templates/deployment-analytics.yaml
@@ -23,9 +23,7 @@ spec:
     spec:
       serviceAccountName: {{ include "supabase.serviceAccountName" . }}
       initContainers:
-      {{- if .Values.analytics.waitForDb }}
-      {{ include "supabase.waitForDb" (include "supabase.dbHost" .) | nindent 6 }}
-      {{- end }}
+  {{ include "supabase.waitForDeployment" (list . "supabase-postgres") | nindent 8 }}
       containers:
         - name: analytics
           image: "{{ .Values.analytics.image.repository }}:{{ .Values.analytics.image.tag }}"
