--- a/k8s/app/supabase/templates/deployment-auth.yaml
+++ b/k8s/app/supabase/templates/deployment-auth.yaml
@@ -23,9 +23,7 @@ spec:
     spec:
       serviceAccountName: {{ include "supabase.serviceAccountName" . }}
       initContainers:
-      {{- if .Values.auth.waitForDb }}
-      {{ include "supabase.waitForDb" (include "supabase.dbHost" .) | nindent 6 }}
-      {{- end }}
+{{ include "supabase.waitForDeployment" (list . "supabase-analytics") | nindent 8 }}
       containers:
         - name: auth
           image: "{{ .Values.auth.image.repository }}:{{ .Values.auth.image.tag }}"
