--- a/k8s/app/supabase/templates/deployment-imgproxy.yaml
+++ b/k8s/app/supabase/templates/deployment-imgproxy.yaml
@@ -23,12 +23,7 @@ spec:
     spec:
       serviceAccountName: {{ include "supabase.serviceAccountName" . }}
       initContainers:
-        - name: init-ebs-check
-          image: busybox:1.37.0
-          command: [ "sh","-c","for i in $(seq 1 5); do echo Checking EBS mount attempt $i; if [ -f /host_ebs_volume/DONT_DELETE ]; then echo OK; exit 0; fi; sleep 10; done; echo FAIL; exit 1" ]
-          volumeMounts:
-            - name: host-ebs-root
-              mountPath: /host_ebs_volume
+      {{ include "supabase.waitForDeployment" (list . "supabase-postgres") | nindent 8 }}
       containers:
         - name: imgproxy
           image: "{{ .Values.imgproxy.image.repository }}:{{ .Values.imgproxy.image.tag }}"
@@ -51,10 +46,6 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       volumes:
-        - name: host-ebs-root
-          hostPath:
-            path: /mnt/existing_ebs_volume
-            type: Directory
         - name: supabase-root
           hostPath:
             path: /mnt/existing_ebs_volume/supabase/volumes
