--- a/k8s/app/supabase/templates/deployment-realtime.yaml
+++ b/k8s/app/supabase/templates/deployment-realtime.yaml
@@ -23,9 +23,7 @@ spec:
     spec:
       serviceAccountName: {{ include "supabase.serviceAccountName" . }}
       initContainers:
-      {{- if .Values.realtime.waitForDb }}
-      {{ include "supabase.waitForDb" (include "supabase.dbHost" .) | nindent 6 }}
-      {{- end }}
+{{ include "supabase.waitForDeployment" (list . "supabase-postgres") | nindent 6 }}
       containers:
         - name: realtime
           image: "{{ .Values.realtime.image.repository }}:{{ .Values.realtime.image.tag }}"
