--- a/k8s/app/supabase/templates/deployment-supavisor.yaml
+++ b/k8s/app/supabase/templates/deployment-supavisor.yaml
@@ -23,15 +23,7 @@ spec:
     spec:
       serviceAccountName: {{ include "supabase.serviceAccountName" . }}
       initContainers:
-      {{- if .Values.supavisor.waitForDb }}
-      {{ include "supabase.waitForDb" (include "supabase.dbHost" .) | nindent 6 }}
-      {{- end }}
-      - name: init-ebs-check
-        image: busybox:1.37.0
-        command: [ "sh","-c","for i in $(seq 1 5); do echo Checking EBS mount attempt $i; if [ -f /host_ebs_volume/DONT_DELETE ]; then echo OK; exit 0; fi; sleep 10; done; echo FAIL; exit 1" ]
-        volumeMounts:
-          - name: host-ebs-root
-            mountPath: /host_ebs_volume
+{{ include "supabase.waitForDeployment" (list . "supabase-analytics") | nindent 6 }}
       containers:
         - name: supavisor
           image: "{{ .Values.supavisor.image.repository }}:{{ .Values.supavisor.image.tag }}"
@@ -62,10 +54,6 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       volumes:
-        - name: host-ebs-root
-          hostPath:
-            path: /mnt/existing_ebs_volume
-            type: Directory
         - name: supabase-root
           hostPath:
             path: /mnt/existing_ebs_volume/supabase/volumes
