chore: simplify service and environment variable naming across Supabase components
- Standardized service names and corresponding environment variables by removing `supabase-` prefix.
- Updated templates and values for consistency (e.g., `supabase-postgres` -> `postgres`).
- Adjusted related references in Ingress, environment configurations, and init container scripts.

--- a/k8s/app/supabase/templates/ingress.yaml
+++ b/k8s/app/supabase/templates/ingress.yaml
@@ -3,7 +3,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: supabase-kong
+  name: kong
   labels:
     {{- include "supabase.labels" . | nindent 4 }}
   {{- with .Values.ingress.kong.annotations }}
@@ -20,7 +20,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: supabase-kong
+                name: kong
                 port:
                   number: {{ .Values.kong.service.ports.http }}
 ---
@@ -31,7 +31,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: supabase-studio
+  name: studio
   labels:
     {{- include "supabase.labels" . | nindent 4 }}
   {{- with .Values.ingress.studio.annotations }}
@@ -48,7 +48,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: supabase-studio
+                name: studio
                 port:
                   number: {{ .Values.studio.service.port }}
 {{- end }}
