--- a/k8s/app/supabase/templates/service-analytics.yaml
+++ b/k8s/app/supabase/templates/service-analytics.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-analytics
+  name: analytics
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
