--- a/k8s/app/supabase/templates/service-auth.yaml
+++ b/k8s/app/supabase/templates/service-auth.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-auth
+  name: auth
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
