--- a/k8s/app/supabase/templates/service-functions.yaml
+++ b/k8s/app/supabase/templates/service-functions.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-functions
+  name: functions
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
