--- a/k8s/app/supabase/templates/service-imgproxy.yaml
+++ b/k8s/app/supabase/templates/service-imgproxy.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-imgproxy
+  name: imgproxy
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
