--- a/k8s/app/supabase/templates/service-kong.yaml
+++ b/k8s/app/supabase/templates/service-kong.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-kong
+  name: kong
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
