--- a/k8s/app/supabase/templates/service-postgres.yaml
+++ b/k8s/app/supabase/templates/service-postgres.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-postgres
+  name: postgres
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
