--- a/k8s/app/supabase/templates/service-realtime.yaml
+++ b/k8s/app/supabase/templates/service-realtime.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-realtime
+  name: realtime
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
