--- a/k8s/app/supabase/templates/service-rest.yaml
+++ b/k8s/app/supabase/templates/service-rest.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-rest
+  name: rest
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
