--- a/k8s/app/supabase/templates/service-studio.yaml
+++ b/k8s/app/supabase/templates/service-studio.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-studio
+  name: studio
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
