--- a/k8s/app/supabase/templates/service-supavisor.yaml
+++ b/k8s/app/supabase/templates/service-supavisor.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: supabase-supavisor
+  name: supavisor
   labels:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
