--- a/k8s/app/supabase/values.yaml
+++ b/k8s/app/supabase/values.yaml
@@ -30,7 +30,31 @@ ingress:
   kong:
     enabled: true
     host: db.bluestone.systems
-    annotations: { }
+    annotations:
+      # Chỉ định Ingress class
+      kubernetes.io/ingress-class: nginx
+
+      # Enable SSL redirect
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
+
+      # Cấu hình SSL
+      nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1 TLSv1.1 TLSv1.2"
+
+      # Cấu hình proxy headers
+      nginx.ingress.kubernetes.io/proxy-set-headers: |
+        X-Real-IP: $remote_addr
+        X-Forwarded-For: $proxy_add_x_forwarded_for
+        X-Nginx-Proxy: "true"
+
+      # Cấu hình GZIP
+      nginx.ingress.kubernetes.io/enable-gzip: "true"
+      nginx.ingress.kubernetes.io/gzip-types: "text/plain text/css text/js text/xml text/javascript application/javascript application/x-javascript application/json application/xml application/xml+rss image/svg+xml"
+      nginx.ingress.kubernetes.io/gzip-min-length: "1100"
+      nginx.ingress.kubernetes.io/gzip-comp-level: "6"
+
+      # Cấu hình proxy buffer
+      nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
+      nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
 
 postgres:
   enabled: true
