--- a/k8s/app/supabase/templates/service-supavisor.yaml
+++ b/k8s/app/supabase/templates/service-supavisor.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/component: supavisor
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app.kubernetes.io/name: supabase
     app.kubernetes.io/instance: {{ .Release.Name }}
