--- a/k8s/app/jmeta/values.yaml
+++ b/k8s/app/jmeta/values.yaml
@@ -47,6 +47,7 @@ podSecurityContext: {}
 
 podEnv:
   BUILD_TIME: <+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.buildTime>
+  GIT_COMMIT_HASH: <+pipeline.stages.SourceCode.spec.execution.steps.Prepare_Source_Code.output.outputVariables.gitCommitHash>
 
 securityContext:
   capabilities:
@@ -166,62 +167,3 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
-
-tlsSecret:
-  name: meta-tls-secret
-  data:
-    tlsKey: |-
-      -----BEGIN PRIVATE KEY-----
-      MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCrQRaeKUWVr5Nh
-      rEKk9lbdGeSZ5vXv+gpkXZQK6nAf5VxwbZCGb/kuC4LgCwSx89Eqg6GziEowZkoe
-      g3CCK/PF65SB2TbT/doYe0kHEb3MNkquE8hnHxlJHUOxMR+bS4HvFW14WKqVi0Gb
-      P0SmvOQQIKteE868WikTG4zNf90Y3tXgm2o5tDbQmwMnD7V+v06rWtYG+xByEAeG
-      IvOqjaE4E+Cp/JdanJFXOCMO96z0zfnRamdSSCDdccgbfR4wQbnfroT7h/hLF8f2
-      i6V6cZxSS8/A3mne7eNLY0LA7Ss0EZ/Rc84BKLdtq/HyNsCzr992IGslQQ8gGLms
-      HZe1h6TxAgMBAAECggEABT+Px63UiY7JjbVzjujo6//RxSOCVMC1KL2DQ+uKn2Lz
-      neibrzpiA3Fb881epIH9fmfYO39rz6HTjRhtM6NmG4IPCW+HL2trj53Cn45MLTnv
-      jg1s540jpMgaRZqaQSj+R3NA3o6avrhsx1Wtac3m5YrMxFZc0EypOYIkrZJo4Rd7
-      /PANNbw5Z644s6MDjjvzKxpJoZg2qjXd917JJuUaEjw+c/6u24BgM+XCo5mvAkPa
-      ETKg0HT4MOJa//5umWxvsxrZSg2crofogPg7bsMAfzDY0LiKWkOEeDR7blznYUDV
-      JGG4X6zWd+9vAqV7CtU1utzXvm5GqUNO7PRF53dDaQKBgQDcrlz2QdIWykGCkZMM
-      odRe1khxNymD5UsVL09ILY/CDtpwxNXjQNPrgNJ6uKTez4pEefqFpPOcToPfW/cA
-      1eXt19WJmBlPYUoLLaZywubE9s5HJg38mO3Dih68egM/gdLOsqpBkJRaEWBT7Tdv
-      funCwbp7eNLdRYxPA61pyMRtCQKBgQDGqaH0YsSH7aCXuxj+FNtAFWGqeplM5JCJ
-      pGnB85KHAV+3D+8k4VC+qFR6QFPCBwKhCtnAlFlLb/Hxu2qn/DKUXLWLn3qcd7bz
-      Ck5JQyxsZ1kkigzZk5O4e7Tqx0m4GNh5SHEsyy1lJg1OcRtKxZs9dU0StNXEKykr
-      aMBe0XLaqQKBgGA9dnM6z0l7GUi8/dlDdh+J6fvd57AKvkzV3giHPiuOWLtXTEQY
-      UJNjEefNQLGe5xjn7VZ9UnR3VVGChN0La4PnXcvs1hTlQ+pOFUn1L7j0PY+PzAe+
-      FeryAGeH+oSmtG3KQy/mwpvo+g5/5G4udfmmjRIt5h/zpbYLz4PTt74pAoGAarU/
-      GsfajLCk7BtBR2jog7l4ZlvH8DdtM6GudNFiSUYBpZDXgVXNSzubdLcMxlGBpgLw
-      B7Mna4/Lw25J0cVzXaGWmlKlR1o+WLmWZ1+/gtLYXPoSAOR2GkfIW7uD63DdBfhV
-      YhwYXBZeW14BrN4Ljq1tIrkjgWU1je2MNuIF8VECgYB8oGdm/EU1e/wqMiXmnnIb
-      UCed+MGDZZEloZ2Hkft9qJfsWFUzNvOxF2MHimse6TGQujRQOsq23FUp2D0+2x2w
-      YDgL9PtITswlQB7/E3VziBoHTZ73IYHMk1pSw/nMl/0eyvFd7vWvkGBin7JFEzTC
-      7Wq/a/OCi3qEcqJJ9XFITw==
-      -----END PRIVATE KEY-----
-
-    tlsCrt: |-
-      -----BEGIN CERTIFICATE-----
-      MIIEFTCCAv2gAwIBAgIUZpnMwwMZh9Y+DMIf7tTZLyLjFRwwDQYJKoZIhvcNAQEL
-      BQAwgagxCzAJBgNVBAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlhMRYwFAYDVQQH
-      Ew1TYW4gRnJhbmNpc2NvMRkwFwYDVQQKExBDbG91ZGZsYXJlLCBJbmMuMRswGQYD
-      VQQLExJ3d3cuY2xvdWRmbGFyZS5jb20xNDAyBgNVBAMTK01hbmFnZWQgQ0EgODE3
-      ZTMzZjdlZjk1NTk3MWRmYTZmYmYxZGRlOTBlZTkwHhcNMjQxMDIwMTM0MTAwWhcN
-      MzQxMDE4MTM0MTAwWjAiMQswCQYDVQQGEwJVUzETMBEGA1UEAxMKQ2xvdWRmbGFy
-      ZTCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAKtBFp4pRZWvk2GsQqT2
-      Vt0Z5Jnm9e/6CmRdlArqcB/lXHBtkIZv+S4LguALBLHz0SqDobOISjBmSh6DcIIr
-      88XrlIHZNtP92hh7SQcRvcw2Sq4TyGcfGUkdQ7ExH5tLge8VbXhYqpWLQZs/RKa8
-      5BAgq14TzrxaKRMbjM1/3Rje1eCbajm0NtCbAycPtX6/Tqta1gb7EHIQB4Yi86qN
-      oTgT4Kn8l1qckVc4Iw73rPTN+dFqZ1JIIN1xyBt9HjBBud+uhPuH+EsXx/aLpXpx
-      nFJLz8Dead7t40tjQsDtKzQRn9FzzgEot22r8fI2wLOv33YgayVBDyAYuawdl7WH
-      pPECAwEAAaOBuzCBuDATBgNVHSUEDDAKBggrBgEFBQcDAjAMBgNVHRMBAf8EAjAA
-      MB0GA1UdDgQWBBRBj5b5gYe9GMSYSbZq4ou5cgzMrDAfBgNVHSMEGDAWgBR254up
-      GpoAw1njvCWM6/T2Bry5JjBTBgNVHR8ETDBKMEigRqBEhkJodHRwOi8vY3JsLmNs
-      b3VkZmxhcmUuY29tLzg4NmEwNWJkLTY0MDgtNDU5ZC05NTlmLTk0M2M4YjM2N2Y0
-      Yi5jcmwwDQYJKoZIhvcNAQELBQADggEBAK06SPzGtOMtXpY92VH6SCRipOQhMlaz
-      ieTyr8XOu6cxTU9ocIz/Z1Uz4C+kOSfPMp8DzDxtLqVJkH5okI0UZ8hXbCkD8MKU
-      X5FrnAUDr9AaGK9pW/Af6zgcj/oQ1wN2xyKOGALy+jMmKbOE/GhzhUHnVrVsjYvv
-      3CsNWY58RcDiKoGMIG8MqaHtgAmZHKOB+qGPzuAKDATUjHr+6Bf5Rh4TNBbv2uO6
-      5njAR4PmjA4sIOmhkJFvM8X7PpqcG+2D8UxqLzlpo8BDDgP/MEfvs8xZgwZbkVUY
-      Ob5yHEKuEmldDjV/vkbBSkZ9sjTXsBdO1tjQzdkXo5468q1BMJ4T5lc=
-      -----END CERTIFICATE-----
