--- a/k8s/app/jmeta/values.yaml
+++ b/k8s/app/jmeta/values.yaml
@@ -48,6 +48,8 @@ podSecurityContext: {}
 podEnv:
   BUILD_TIME: <+pipeline.stages.Configuration.spec.execution.steps.Resolve_Configuration.output.outputVariables.buildTime>
   GIT_COMMIT_HASH: <+pipeline.stages.SourceCode.spec.execution.steps.Prepare_Source_Code.output.outputVariables.gitCommitHash>
+  GIT_COMMIT_MESSAGE: <+pipeline.stages.SourceCode.spec.execution.steps.Prepare_Source_Code.output.outputVariables.gitCommitMessage>
+  GIT_COMMIT_TIME: <+pipeline.stages.SourceCode.spec.execution.steps.Prepare_Source_Code.output.outputVariables.gitCommitTime>
 
 securityContext:
   capabilities:
