--- a/harness/cd/jmeta/k8s-rolling-pipeline.yaml
+++ b/harness/cd/jmeta/k8s-rolling-pipeline.yaml
@@ -301,6 +301,9 @@ pipeline:
                             log "Build completed successfully"
                           privileged: false
                           resources:
+                            requests:
+                              memory: 1000Mi
+                              cpu: 250m
                             limits:
                               memory: 6000Mi
                               cpu: 7500m
