--- a/misc/manage-spot-request/aws-python-spot-manager/serverless.yml
+++ b/misc/manage-spot-request/aws-python-spot-manager/serverless.yml
@@ -15,9 +15,9 @@ provider:
     HEALTHCHECK_URL: https://jhttp.bluestone.systems/q/health/live
     UNHEALTHY_RESTART_AFTER_SECONDS: 1260
     HEALTHCHECK_TIMEOUT_SECONDS: 5
-  SLACK_POST_URL: https://slack.bluestone.systems/slack/post-message
-  SLACK_CHANNEL: general-meta-bot-channel
-  SLACK_TOKEN: '1235' # fill in via CI/CD secrets or SSM, keep empty locally
+    SLACK_POST_URL: https://slack.bluestone.systems/slack/post-message
+    SLACK_CHANNEL: general-meta-bot-channel
+    SLACK_TOKEN: '1235'
 
 functions:
 #  modifySpotRequestOn:
