--- a/misc/manage-spot-request/aws-python-spot-manager/serverless.yml
+++ b/misc/manage-spot-request/aws-python-spot-manager/serverless.yml
@@ -13,8 +13,8 @@ provider:
     DDB_TABLE_NAME: common
     DDB_ITEM_ID: health:jhttp-live
     DDB_FLAG_ITEM_ID: "feature:healthcheck-enabled"
-    HEALTHCHECK_URL: "https://jhttp.bluestone.systems/q/health/live"
-    UNHEALTHY_RESTART_AFTER_SECONDS: 1860
+    HEALTHCHECK_URL: "https://whoami.bluestone.systems"
+    UNHEALTHY_RESTART_AFTER_SECONDS: 780
     HEALTHCHECK_TIMEOUT_SECONDS: 5
     SLACK_POST_URL: "https://slack.bluestone.systems/slack/post-message"
     SLACK_CHANNEL: general-meta-bot-channel
