Add `--profile ggg` to spot request, update IAM role and endpoint host

--- a/k8s/app/ggg-brand/values.yaml
+++ b/k8s/app/ggg-brand/values.yaml
@@ -140,7 +140,7 @@ ingress:
       paths:
         - path: /
           pathType: Prefix
-    - host: sumoyakiniku.com.vn
+    - host: sumogoya.com.vn
       paths:
         - path: /
           pathType: Prefix
